# orthanc-python

./: .hgignore  AUTHORS  CITATION.cff  CMakeLists.txt  NEWS  OrthancSDKVersion.cmake  README  TODO
.reuse/: dep5
CodeAnalysis/: Class.mustache  ClassDocumentation.json  ClassMethods.mustache  CustomFunctions.json  CustomMethods.json  Dockerfile  Enumeration.mustache  FunctionBody.mustache  FunctionDocumentation.mustache  GenerateOrthancSDK.py  GlobalFunctions.mustache  ParseOrthancSDK.py  PythonDocumentation.mustache  README.txt  docker-compose.yml  sdk.cpp.mustache  sdk.h.mustache
Resources/: OrthancCPlugin-1.10.0.patch  OrthancCPlugin-1.5.7.patch  SyncOrthancFolder.py  valgrind-python.supp
Resources/Builders/: BuildAllWindows.sh  Dockerfile-MinGW-BuildEnvironment
Resources/Builders/Debian/: docker-bookworm-compile.sh  docker-bullseye-compile.sh  docker-buster-compile.sh  docker-internal.sh  docker-trixie-compile.sh
Resources/Builders/DebianStable/: Dockerfile-BuildEnvironment  NOTES.txt  docker-compile.sh  docker-internal.sh
Resources/Builders/Docker/: Dockerfile-Release  docker-compile.sh  docker-internal.sh
Resources/Builders/LinuxStandardBase/: docker-compile.sh
Resources/Builders/MinGW32-Python2.7/: docker-compile.sh  docker-internal.sh
Resources/Builders/MinGW32-Python3.10/: docker-compile.sh  docker-internal.sh
Resources/Builders/MinGW32-Python3.11/: docker-compile.sh  docker-internal.sh
Resources/Builders/MinGW32-Python3.12/: docker-compile.sh  docker-internal.sh
Resources/Builders/MinGW32-Python3.13/: docker-compile.sh  docker-internal.sh
Resources/Builders/MinGW32-Python3.14/: docker-compile.sh  docker-internal.sh
Resources/Builders/MinGW32-Python3.7/: docker-compile.sh  docker-internal.sh
Resources/Builders/MinGW32-Python3.8/: docker-compile.sh  docker-internal.sh
Resources/Builders/MinGW32-Python3.9/: docker-compile.sh  docker-internal.sh
Resources/Builders/MinGW64-Python2.7/: docker-compile.sh  docker-internal.sh
Resources/Builders/MinGW64-Python3.10/: docker-compile.sh  docker-internal.sh
Resources/Builders/MinGW64-Python3.11/: docker-compile.sh  docker-internal.sh
Resources/Builders/MinGW64-Python3.12/: docker-compile.sh  docker-internal.sh
Resources/Builders/MinGW64-Python3.13/: docker-compile.sh  docker-internal.sh
Resources/Builders/MinGW64-Python3.14/: docker-compile.sh  docker-internal.sh
Resources/Builders/MinGW64-Python3.7/: docker-compile.sh  docker-internal.sh
Resources/Builders/MinGW64-Python3.8/: docker-compile.sh  docker-internal.sh
Resources/Builders/MinGW64-Python3.9/: docker-compile.sh  docker-internal.sh
Resources/Builders/Windows32-Python2.7/: docker-compile.sh  docker-internal.sh
Resources/Orthanc/: OrthancPluginCodeModel.json
Resources/Orthanc/Plugins/: OrthancPluginCppWrapper.cpp
Resources/Orthanc/Sdk-1.10.0/: ClassDocumentation.json  ClassDocumentation.json.license  CodeModel.json
Resources/Orthanc/Sdk-1.10.0/orthanc/: OrthancCPlugin.h
Resources/Orthanc/Sdk-1.12.10/orthanc/: OrthancCPlugin.h
Resources/Orthanc/Sdk-1.12.6/: ClassDocumentation.json  ClassDocumentation.json.license  CodeModel.json  CodeModel.json.license
Resources/Orthanc/Sdk-1.12.6/orthanc/: OrthancCPlugin.h
Resources/Orthanc/Sdk-1.12.9/: ClassDocumentation.json  CodeModel.json
Resources/Orthanc/Sdk-1.12.9/orthanc/: OrthancCPlugin.h  OrthancPluginCodeModel.json
Resources/Orthanc/Sdk-1.5.7/orthanc/: OrthancCPlugin.h
Sources/: DicomScpCallbacks.cpp  DicomScpCallbacks.h  ICallbackRegistration.cpp  ICallbackRegistration.h  IncomingHttpRequestFilter.cpp  IncomingHttpRequestFilter.h  IncomingInstanceFilter.cpp  IncomingInstanceFilter.h  OnChangeCallback.cpp  OnChangeCallback.h  OnStoredInstanceCallback.cpp  OnStoredInstanceCallback.h  Plugin.cpp  PythonBytes.cpp  PythonBytes.h  PythonFunction.cpp  PythonFunction.h  PythonHeaderWrapper.h  PythonLock.cpp  PythonLock.h  PythonModule.cpp  PythonModule.h  PythonObject.cpp  PythonObject.h  PythonString.cpp  PythonString.h  PythonThreadsAllower.cpp  PythonThreadsAllower.h  README.txt  ReceivedInstanceCallback.cpp  ReceivedInstanceCallback.h  RestCallbacks.cpp  RestCallbacks.h  StorageArea.cpp  StorageArea.h  StorageArea3.cpp  StorageArea3.h  StorageCommitmentScpCallback.cpp  StorageCommitmentScpCallback.h
Sources/Autogenerated/: CodeModel.json  orthanc.pyi  sdk.cpp  sdk.h  sdk_GlobalFunctions.impl.h  sdk_OrthancPluginChangeType.impl.h  sdk_OrthancPluginCompressionType.impl.h  sdk_OrthancPluginConstraintType.impl.h  sdk_OrthancPluginContentType.impl.h  sdk_OrthancPluginCreateDicomFlags.impl.h  sdk_OrthancPluginDicomInstance.impl.h  sdk_OrthancPluginDicomInstance.methods.h  sdk_OrthancPluginDicomToJsonFlags.impl.h  sdk_OrthancPluginDicomToJsonFormat.impl.h  sdk_OrthancPluginDicomWebBinaryMode.impl.h  sdk_OrthancPluginDicomWebNode.impl.h  sdk_OrthancPluginDicomWebNode.methods.h  sdk_OrthancPluginErrorCode.impl.h  sdk_OrthancPluginFindAnswers.impl.h  sdk_OrthancPluginFindAnswers.methods.h  sdk_OrthancPluginFindMatcher.impl.h  sdk_OrthancPluginFindMatcher.methods.h  sdk_OrthancPluginFindQuery.impl.h  sdk_OrthancPluginFindQuery.methods.h  sdk_OrthancPluginHttpAuthenticationStatus.impl.h  sdk_OrthancPluginHttpMethod.impl.h  sdk_OrthancPluginIdentifierConstraint.impl.h  sdk_OrthancPluginImage.impl.h  sdk_OrthancPluginImage.methods.h  sdk_OrthancPluginImageFormat.impl.h  sdk_OrthancPluginInstanceOrigin.impl.h  sdk_OrthancPluginJob.impl.h  sdk_OrthancPluginJob.methods.h  sdk_OrthancPluginJobStepStatus.impl.h  sdk_OrthancPluginJobStopReason.impl.h  sdk_OrthancPluginKeysValuesIterator.impl.h  sdk_OrthancPluginKeysValuesIterator.methods.h  sdk_OrthancPluginLoadDicomInstanceMode.impl.h  sdk_OrthancPluginLogCategory.impl.h  sdk_OrthancPluginLogLevel.impl.h  (+24 more)
